--- a/proyectoFinalRelease/src/main/resources/static/bower.json
+++ b/proyectoFinalRelease/src/main/resources/static/bower.json
@@ -6,6 +6,7 @@
     "jquery": "~2.2.0",
     "jquery-ui": "~1.12.0",
     "angular": "~1.7.0",
+    "bootbox": "4.x.x",
     "angular-route": "^1.7.5",
     "angular-sanitize": "~1.7.0",
     "angular-animate": "~1.7.0",
